<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ipaddress"
        android:id="@+id/textView_ip"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_ip"
        android:layout_below="@+id/textView_ip"
        android:layout_alignParentStart="true"
        android:ems="16"
        android:text="@string/enter_ip_address"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/username"
        android:id="@+id/textView_username"
        android:layout_below="@+id/editText_ip"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_username"
        android:layout_below="@+id/textView_username"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:text="@string/enter_username"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password"
        android:id="@+id/textView_password"
        android:layout_below="@+id/editText_username"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_password"
        android:layout_below="@+id/textView_password"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:text="@string/enter_password"
        android:inputType="text"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dvs_add"
        android:id="@+id/button_insert"
        android:layout_below="@+id/editText_password"
        android:layout_alignParentStart="true"/>

</RelativeLayout>